--- a/HoganExpressApp/templates/Profile.mustache
+++ b/HoganExpressApp/templates/Profile.mustache
@@ -3,7 +3,7 @@
         <h3 class="panel-title">Profile</h3>
     </div>
     <div class="panel-body">
-        <form>
+        <form id="profileFormId" name="profileFormName">
             <table>
                 <tr>
                 <td>First name:</td><td><input type="text" class="text" name="firstname" value="{{firstName}}"></td>
