add plus icon for create user

--- a/HoganExpressApp/templates/Users.mustache
+++ b/HoganExpressApp/templates/Users.mustache
@@ -1,12 +1,20 @@
 <!-- This is the <em>{{name}}</em> page. (Users.mustache) -->
 
 
-
+<!--
 <a id="createUser" href="#"
    data-toggle="modal"
    data-target="#basicModal">Create User</a>
+-->
+
+<button type="button" class="btn btn-default btn-md" name="createUser" data-toggle="modal" data-target="#basicModal">
+    <span class="glyphicon glyphicon-plus"></span>
+</button>
 
 [{{users.length}}]
+
+<br/>
+<br/>
 
 <div class="panel panel-default">
 
